--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "build": "next build",
       "start": "next start",
       "lint": "next lint",
+      "typecheck": "tsc --noEmit",
       "format": "prettier --write .",
       "prepare": "husky install"
    },
@@ -23,6 +24,7 @@
       "@radix-ui/react-label": "^2.1.2",
       "@radix-ui/react-popover": "^1.1.6",
       "@radix-ui/react-progress": "^1.1.2",
+      "@radix-ui/react-scroll-area": "^1.2.9",
       "@radix-ui/react-select": "^2.1.6",
       "@radix-ui/react-separator": "^1.1.2",
       "@radix-ui/react-slot": "^1.1.2",
@@ -31,6 +33,7 @@
       "@radix-ui/react-toggle": "^1.1.2",
       "@radix-ui/react-tooltip": "^1.1.8",
       "@remixicon/react": "^4.6.0",
+      "@tanstack/react-query": "^5.81.5",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
       "cmdk": "1.0.0",
