--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-   "name": "circle",
+   "name": "task-ui",
    "version": "0.1.0",
    "private": true,
    "scripts": {
-      "dev": "next dev --turbopack",
+      "dev": "concurrently \"npm run dev:next\" \"npm run dev:ws\"",
+      "dev:next": "next dev --turbopack -p 5565",
+      "dev:ws": "tsx scripts/ws.ts",
       "build": "next build",
-      "start": "next start",
+      "start": "next start -p 5565",
       "lint": "next lint",
       "typecheck": "tsc --noEmit",
       "format": "prettier --write .",
@@ -24,6 +26,7 @@
       "@radix-ui/react-label": "^2.1.2",
       "@radix-ui/react-popover": "^1.1.6",
       "@radix-ui/react-progress": "^1.1.2",
+      "@radix-ui/react-radio-group": "^1.3.7",
       "@radix-ui/react-scroll-area": "^1.2.9",
       "@radix-ui/react-select": "^2.1.6",
       "@radix-ui/react-separator": "^1.1.2",
@@ -34,10 +37,12 @@
       "@radix-ui/react-tooltip": "^1.1.8",
       "@remixicon/react": "^4.6.0",
       "@tanstack/react-query": "^5.81.5",
+      "chokidar": "^4.0.3",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
       "cmdk": "1.0.0",
       "date-fns": "^4.1.0",
+      "dotenv": "^17.0.0",
       "lucide-react": "^0.476.0",
       "motion": "^12.4.10",
       "next": "15.2.4",
@@ -56,6 +61,7 @@
       "tailwindcss-animate": "^1.0.7",
       "usehooks-ts": "^3.1.1",
       "uuid": "^11.1.0",
+      "ws": "^8.18.3",
       "zod": "^3.24.2",
       "zustand": "^5.0.3"
    },
@@ -65,6 +71,8 @@
       "@types/node": "^20",
       "@types/react": "^19",
       "@types/react-dom": "^19",
+      "@types/ws": "^8.18.1",
+      "concurrently": "^9.2.0",
       "eslint": "^9",
       "eslint-config-next": "15.2.4",
       "eslint-config-prettier": "^10.0.2",
@@ -73,6 +81,7 @@
       "lint-staged": "^15.4.3",
       "prettier": "^3.5.2",
       "tailwindcss": "^4",
+      "tsx": "^4.20.3",
       "typescript": "^5"
    }
 }
