--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
       "dev:next": "next dev --turbopack -p 5565",
       "dev:ws": "tsx scripts/ws.ts",
       "build": "next build",
-      "start": "next start -p 5565",
+      "start": "concurrently \"npm run start:next\" \"npm run start:ws\"",
+      "start:next": "next start -p 5565",
+      "start:ws": "tsx scripts/ws.ts",
       "lint": "next lint",
       "typecheck": "tsc --noEmit",
       "format": "prettier --write .",
