--- a/package.json
+++ b/package.json
@@ -1,19 +1,53 @@
 {
-   "name": "task-ui",
-   "version": "0.1.0",
-   "private": true,
+   "name": "task-studio",
+   "version": "0.1.1-beta.14",
+   "description": "Web-based UI for Taskmaster task management system",
+   "keywords": [
+      "taskmaster",
+      "task",
+      "management",
+      "ui",
+      "web",
+      "visualization"
+   ],
+   "homepage": "https://github.com/udecode/task-studio",
+   "bugs": {
+      "url": "https://github.com/udecode/task-studio/issues"
+   },
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/udecode/task-studio.git"
+   },
+   "license": "MIT",
+   "bin": {
+      "task-studio": "./bin/index.js"
+   },
+   "files": [
+      "bin/**/*",
+      ".next/standalone/**/*",
+      ".next/static/**/*",
+      "public/**/*",
+      "scripts/ws.js",
+      "package.json"
+   ],
    "scripts": {
       "dev": "concurrently \"npm run dev:next\" \"npm run dev:ws\"",
       "dev:next": "next dev --turbopack -p 5565",
-      "dev:ws": "tsx scripts/ws.ts",
-      "build": "next build",
+      "dev:ws": "node scripts/ws.js",
+      "build": "next build && node scripts/prepare-package.js",
       "start": "concurrently \"npm run start:next\" \"npm run start:ws\"",
       "start:next": "next start -p 5565",
-      "start:ws": "tsx scripts/ws.ts",
+      "start:ws": "node scripts/ws.js",
       "lint": "next lint",
       "typecheck": "tsc --noEmit",
       "format": "prettier --write .",
-      "prepare": "husky install"
+      "release:beta": "npm version prerelease --preid=beta --no-git-tag-version && npm publish --tag beta",
+      "release:patch": "pnpm run build && npm version patch --no-git-tag-version && npm publish",
+      "release:minor": "pnpm run build && npm version minor --no-git-tag-version && npm publish",
+      "release:major": "pnpm run build && npm version major --no-git-tag-version && npm publish"
+   },
+   "publishConfig": {
+      "access": "public"
    },
    "dependencies": {
       "@hookform/resolvers": "^4.1.2",
@@ -41,6 +75,8 @@
       "@tanstack/react-query": "^5.81.5",
       "chokidar": "^4.0.3",
       "class-variance-authority": "^0.7.1",
+      "commander": "^14.0.0",
+      "concurrently": "^9.2.0",
       "clsx": "^2.1.1",
       "cmdk": "1.0.0",
       "date-fns": "^4.1.0",
@@ -48,6 +84,7 @@
       "lucide-react": "^0.476.0",
       "motion": "^12.4.10",
       "next": "15.2.4",
+      "open": "^10.1.0",
       "next-themes": "^0.4.4",
       "nuqs": "^2.4.3",
       "react": "^19.0.0",
@@ -74,16 +111,12 @@
       "@types/react": "^19",
       "@types/react-dom": "^19",
       "@types/ws": "^8.18.1",
-      "concurrently": "^9.2.0",
       "eslint": "^9",
       "eslint-config-next": "15.2.4",
       "eslint-config-prettier": "^10.0.2",
       "eslint-plugin-prettier": "^5.2.3",
-      "husky": "^9.1.7",
-      "lint-staged": "^15.4.3",
       "prettier": "^3.5.2",
       "tailwindcss": "^4",
-      "tsx": "^4.20.3",
       "typescript": "^5"
    }
 }
